[package]
edition = "2021"
name = "co2-monitor"
version = "0.1.0"

[[bin]]
name = "co2-monitor"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "1.0.0-rc.0", features = ["esp32", "unstable"] }
#critical-section = "1.2.0"
#esp-backtrace = { version = "0.16.0", features = [
#    "esp32",
#    "panic-handler",
#    "exception-handler",
#    "println",
#] }
esp-println = { version = "0.14.0", features = ["esp32", "log-04"] }
esp-alloc = "0.8.0"
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"
log = "0.4.20"

# network
esp-wifi = { version = "0.15.0", features = ["esp32", "wifi", "smoltcp"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["socket-udp", "proto-ipv4", "medium-ethernet"] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
# by required blocking-network-stack
embedded-io = { version = "0.6.1", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
